remove unneeded exception